--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     "react": "https://esm.sh/react@^19.2.4",
     "react/": "https://esm.sh/react@^19.2.4/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.41.0"
   }
 }
 </script>
